<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mydrobe</string>

    <!-- textview content -->
    <string name="home_first_row_text">Make an Outfit or Add New Clothes</string>
    <string name="home_second_row_text">Settings and Profile</string>

    <string-array name="clothing_categories">
        <item>Shirt</item>
        <item>Pants</item>
        <item>Skirt</item>
        <item>Jacket</item>
        <item>Coat</item>
        <item>Dress</item>
        <item>Shoes</item>
        <item>Jewelery</item>
        <item>Hat</item>
    </string-array>

    <string-array name="materials">
        <item>Cotton</item>
        <item>Denim</item>
        <item>Leather</item>
        <item>Polyester</item>
        <item>Velvet</item>
        <item>Silk</item>
    </string-array>

    <string name="addClothingItemTitle">Add a Clothing Piece</string>
    <string name="spFileName">Clothing Items Saved</string>
    <string name="addOutfitTitle">Create an Outfit</string>
    <string name="add">Add</string>
    <string name="goBack">Back</string>
    <string name="pants">Choose a Pair of Pants</string>
    <string name="shirt">Choose a Shirt/Dress</string>
    <string name="shoes">Choose a Pair of Shoes</string>
    <string name="jacket">Choose a Jacket</string>
    <string name="accessory">Choose an Accessory</string>
    <string name="nameOfOutfit">Name of Outfit</string>
    <string name="selectClothingItems">Select Clothing Items (5 max)</string>
    <string name="create">Create</string>
    <string name="clothingCategory">Clothing Category</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="seasons">Season(s)</string>
    <string name="colors">Color(s)</string>
    <string name="material">Material</string>
    <string name="patternType">Pattern Type</string>
    <string name="photoOfClothing">Photo of Clothing</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="addClothingItem">Add Clothing</string>
    <string name="cancel">Cancel</string>
    <string name="shared_pref_mydrobe">edu.psu.ist.hcdd340.mydrobe</string>
    <string name="login">LOGIN</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <!--<string name="login" tools:ignore="DuplicateDefinition">LOGIN</string>-->
</resources>