<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_clothing_activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClothingItemActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="600dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="1500dp">

            <CheckBox
                android:id="@+id/winterCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/winter"
                app:layout_constraintStart_toEndOf="@+id/fallCheckBox"
                app:layout_constraintTop_toBottomOf="@id/seasons_label" />

            <TextView
                android:id="@+id/addClothingItemTitle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/addClothingItemTitle"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/clothingCategory_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/clothingCategory"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addClothingItemTitle_label" />

            <Spinner
                android:id="@+id/clothingCategory_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:contentDescription="A dropdown to select the clothing category"
                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clothingCategory_label" />

            <Spinner
                android:id="@+id/material_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:contentDescription="a dropdown to select the clothing material"
                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_label" />

            <TextView
                android:id="@+id/brand_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/brand"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clothingCategory_spinner" />

            <EditText
                android:id="@+id/brand_input"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="enter the brand here"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brand_label" />

            <TextView
                android:id="@+id/size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/size"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brand_input" />

            <EditText
                android:id="@+id/size_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="enter the size here"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/size_label" />

            <TextView
                android:id="@+id/colors_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/colors"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/size_input" />

            <CheckBox
                android:id="@+id/redCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="Red"
                app:layout_constraintEnd_toStartOf="@+id/orangeCheckBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/colors_label" />

            <CheckBox
                android:id="@+id/orangeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Orange"
                app:layout_constraintBottom_toBottomOf="@+id/redCheckBox"
                app:layout_constraintEnd_toStartOf="@+id/yellowCheckBox"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/redCheckBox"
                app:layout_constraintTop_toTopOf="@+id/redCheckBox" />

            <CheckBox
                android:id="@+id/yellowCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yellow"
                app:layout_constraintBottom_toBottomOf="@+id/orangeCheckBox"
                app:layout_constraintEnd_toStartOf="@+id/greenCheckBox"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/orangeCheckBox"
                app:layout_constraintTop_toTopOf="@+id/orangeCheckBox" />

            <CheckBox
                android:id="@+id/greenCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Green"
                app:layout_constraintBottom_toBottomOf="@+id/yellowCheckBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/yellowCheckBox"
                app:layout_constraintTop_toTopOf="@+id/yellowCheckBox" />

            <CheckBox
                android:id="@+id/blackCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Black"
                app:layout_constraintBottom_toBottomOf="@+id/greyCheckBox2"
                app:layout_constraintEnd_toStartOf="@+id/greyCheckBox2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/purpleCheckBox"
                app:layout_constraintTop_toTopOf="@+id/greyCheckBox2"
                app:layout_constraintVertical_bias="1.0" />

            <CheckBox
                android:id="@+id/blueCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="Blue"
                app:layout_constraintBottom_toBottomOf="@+id/purpleCheckBox"
                app:layout_constraintEnd_toStartOf="@+id/purpleCheckBox"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/purpleCheckBox"
                app:layout_constraintVertical_bias="1.0" />

            <CheckBox
                android:id="@+id/purpleCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Purple"
                app:layout_constraintBottom_toBottomOf="@+id/blackCheckBox"
                app:layout_constraintEnd_toStartOf="@+id/blackCheckBox"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/blueCheckBox"
                app:layout_constraintTop_toTopOf="@+id/blackCheckBox"
                app:layout_constraintVertical_bias="1.0" />

            <CheckBox
                android:id="@+id/greyCheckBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/blackCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/greenCheckBox" />

            <TextView
                android:id="@+id/material_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/material"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blueCheckBox" />

            <TextView
                android:id="@+id/photoOfClothing_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/photoOfClothing"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_spinner" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photoOfClothing_label"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/addClothingItem_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="64dp"
                android:text="@string/addClothingItem"
                app:layout_constraintEnd_toStartOf="@+id/cancelAdd_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/summerCheckBox" />

            <Button
                android:id="@+id/takePicture_button"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="56dp"
                android:text="Take a Picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/seasons_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/seasons"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/takePicture_button" />

            <CheckBox
                android:id="@+id/fallCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/fall"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seasons_label" />

            <CheckBox
                android:id="@+id/springCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/spring"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fallCheckBox" />

            <CheckBox
                android:id="@+id/summerCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/summer"
                app:layout_constraintStart_toEndOf="@+id/springCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/winterCheckBox" />

            <Button
                android:id="@+id/cancelAdd_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/addClothingItem_button"
                app:layout_constraintTop_toBottomOf="@+id/springCheckBox" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>